; ModuleID = '/home/carl/AnghaBench/RetroArch/wiiu/system/extr_memory.c__calloc_r.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wiiu/system/extr_memory.c__calloc_r.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._reent = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @_calloc_r(%struct._reent* %0, i64 %1, i64 %2) #0 {
  %4 = alloca %struct._reent*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store %struct._reent* %0, %struct._reent** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load %struct._reent*, %struct._reent** %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = mul i64 %9, %10
  %12 = call i8* @_malloc_r(%struct._reent* %8, i64 %11)
  store i8* %12, i8** %7, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %21

15:                                               ; preds = %3
  %16 = load i8*, i8** %7, align 8
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = mul i64 %17, %18
  %20 = call i32 @memset(i8* %16, i32 0, i64 %19)
  br label %21

21:                                               ; preds = %15, %3
  %22 = load i8*, i8** %7, align 8
  ret i8* %22
}

declare dso_local i8* @_malloc_r(%struct._reent*, i64) #1

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
